fix: Wrap text from overflow

--- a/styles/content.sass
+++ b/styles/content.sass
@@ -3,6 +3,9 @@
     hr
         margin: 30px 0
 
+    & > p
+        word-break: break-word
+
     & > p,
     & > ol, & ul,
     & > blockquote
